finish the Our Team section in index.html

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <ul>
           <li>
             <img
-              src="./images/img-3.jpg"
+              src="./images/our-team/img-3.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
@@ -76,7 +76,7 @@
           </li>
           <li>
             <img
-              src="./images/img-2.jpg"
+              src="./images/our-team/img-2.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
@@ -86,7 +86,7 @@
           </li>
           <li>
             <img
-              src="./images/img-1.jpg"
+              src="./images/our-team/img-1.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
@@ -96,7 +96,7 @@
           </li>
           <li>
             <img
-              src="./images/img.jpg"
+              src="./images/our-team/img.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
@@ -109,6 +109,69 @@
 
       <section>
         <h2>Our Portfolio</h2>
+
+        <ul>
+          <li>
+            <img
+              src="./images/our-portfolio/img-5.jpg"
+              alt="Banking App"
+              width="360"
+              height="300"
+            />
+            <h3>Banking App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/our-portfolio/img-4.jpg"
+              alt="Cashless Payment"
+              width="360"
+              height="300"
+            />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/our-portfolio/img-3.jpg"
+              alt="Meditation App"
+              width="360"
+              height="300"
+            />
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/our-portfolio/img-2.jpg"
+              alt="Taxi Service"
+              width="360"
+              height="300"
+            />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/our-portfolio/img-1.jpg"
+              alt="Screen Illustrations"
+              width="360"
+              height="300"
+            />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/our-portfolio/img.jpg"
+              alt="Online Courses"
+              width="360"
+              height="300"
+            />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
+          </li>
+        </ul>
       </section>
     </main>
 
