--- a/index.html
+++ b/index.html
@@ -23,53 +23,53 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header>
-      <a href="#">Webstudio</a>
+    <header class="page-header">
+      <a class="company-logo" href="#">Webstudio</a>
 
       <nav>
-        <ul>
-          <li><a href="#">Studio</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contacts</a></li>
+        <ul class="page-nav">
+          <li><a href="#" class="link">Studio</a></li>
+          <li><a href="#" class="link">Portfolio</a></li>
+          <li><a href="#" class="link">Contacts</a></li>
         </ul>
       </nav>
 
-      <address>
+      <address class="company-contacts">
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a href="tel:+110001111111">+11 (000) 111-11-11</a>
       </address>
     </header>
 
     <main>
-      <h1>Effective Solutions for Your Business</h1>
-      <button type="button">Order Service</button>
+      <h1 class="page-title">Effective Solutions for Your Business</h1>
+      <button type="button" class="order-button">Order Service</button>
 
       <section>
-        <ul>
+        <ul class="info-list">
           <li>
-            <h2>Strategy</h2>
-            <p>
+            <h2 class="section-title-small">Strategy</h2>
+            <p class="section-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h2>Punctuality</h2>
-            <p>
+            <h2 class="section-title-small">Punctuality</h2>
+            <p class="section-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h2>Diligence</h2>
-            <p>
+            <h2 class="section-title-small">Diligence</h2>
+            <p class="section-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h2>Technologies</h2>
-            <p>
+            <h2 class="section-title-small">Technologies</h2>
+            <p class="section-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -78,9 +78,9 @@
       </section>
 
       <section>
-        <h2>Our Team</h2>
+        <h2 class="section-title-middle">Our Team</h2>
 
-        <ul>
+        <ul class="team-list">
           <li>
             <img
               src="./images/our-team/img-3.jpg"
@@ -88,8 +88,8 @@
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="card-title">Mark Guerrero</h3>
+            <p class="section-text">Product Designer</p>
           </li>
           <li>
             <img
@@ -98,8 +98,8 @@
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="card-title">Tom Ford</h3>
+            <p class="section-text">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -108,8 +108,8 @@
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="card-title">Camila Garcia</h3>
+            <p class="section-text">Marketing</p>
           </li>
           <li>
             <img
@@ -118,16 +118,16 @@
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="card-title">Daniel Wilson</h3>
+            <p class="section-text">UI Designer</p>
           </li>
         </ul>
       </section>
 
       <section>
-        <h2>Our Portfolio</h2>
+        <h2 class="section-title-big">Our Portfolio</h2>
 
-        <ul>
+        <ul class="portfolio-list">
           <li>
             <img
               src="./images/our-portfolio/img-5.jpg"
@@ -135,8 +135,8 @@
               width="360"
               height="300"
             />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="card-title">Banking App</h3>
+            <p class="section-text">App</p>
           </li>
           <li>
             <img
@@ -145,8 +145,8 @@
               width="360"
               height="300"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="card-title">Cashless Payment</h3>
+            <p class="section-text">Marketing</p>
           </li>
           <li>
             <img
@@ -155,8 +155,8 @@
               width="360"
               height="300"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="card-title">Meditation App</h3>
+            <p class="section-text">App</p>
           </li>
           <li>
             <img
@@ -165,8 +165,8 @@
               width="360"
               height="300"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="card-title">Taxi Service</h3>
+            <p class="section-text">Marketing</p>
           </li>
           <li>
             <img
@@ -175,8 +175,8 @@
               width="360"
               height="300"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="card-title">Screen Illustrations</h3>
+            <p class="section-text">Design</p>
           </li>
           <li>
             <img
@@ -185,17 +185,17 @@
               width="360"
               height="300"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="card-title">Online Courses</h3>
+            <p class="section-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
-      <a href="#">Webstudio</a>
+    <footer class="page-footer">
+      <a class="company-logo" href="#">Webstudio</a>
 
-      <p>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
