--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <header class="page-header">
-      <a class="company-logo" href="#">Webstudio</a>
+      <a href="#" class="company-logo">Webstudio</a>
 
       <nav>
         <ul class="page-nav">
@@ -35,14 +35,14 @@
       </nav>
 
       <address class="company-contacts">
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+        <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
       </address>
     </header>
 
     <main>
       <h1 class="page-title">Effective Solutions for Your Business</h1>
-      <button type="button" class="order-button">Order Service</button>
+      <button type="button" id="order-button">Order Service</button>
 
       <section>
         <ul class="info-list">
@@ -193,7 +193,7 @@
     </main>
 
     <footer class="page-footer">
-      <a class="company-logo" href="#">Webstudio</a>
+      <a href="#" class="company-logo">Webstudio</a>
 
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
