--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <header class="page-header">
-      <a href="#" class="company-logo">Webstudio</a>
+      <a href="#" class="company-logo"><em>Web</em>studio</a>
 
       <nav>
         <ul class="page-nav">
@@ -193,7 +193,7 @@
     </main>
 
     <footer class="page-footer">
-      <a href="#" class="company-logo">Webstudio</a>
+      <a href="#" class="company-logo"><em>Web</em>studio</a>
 
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
