change some classes name

--- a/index.html
+++ b/index.html
@@ -47,28 +47,28 @@
       <section>
         <ul class="info-list">
           <li>
-            <h2 class="section-title-small">Strategy</h2>
+            <h2 class="title">Strategy</h2>
             <p class="section-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h2 class="section-title-small">Punctuality</h2>
+            <h2 class="title">Punctuality</h2>
             <p class="section-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h2 class="section-title-small">Diligence</h2>
+            <h2 class="title">Diligence</h2>
             <p class="section-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h2 class="section-title-small">Technologies</h2>
+            <h2 class="title">Technologies</h2>
             <p class="section-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -88,7 +88,7 @@
               width="264"
               height="260"
             />
-            <h3 class="card-title">Mark Guerrero</h3>
+            <h3 class="title">Mark Guerrero</h3>
             <p class="section-text">Product Designer</p>
           </li>
           <li>
@@ -98,7 +98,7 @@
               width="264"
               height="260"
             />
-            <h3 class="card-title">Tom Ford</h3>
+            <h3 class="title">Tom Ford</h3>
             <p class="section-text">Frontend Developer</p>
           </li>
           <li>
@@ -108,7 +108,7 @@
               width="264"
               height="260"
             />
-            <h3 class="card-title">Camila Garcia</h3>
+            <h3 class="title">Camila Garcia</h3>
             <p class="section-text">Marketing</p>
           </li>
           <li>
@@ -118,7 +118,7 @@
               width="264"
               height="260"
             />
-            <h3 class="card-title">Daniel Wilson</h3>
+            <h3 class="title">Daniel Wilson</h3>
             <p class="section-text">UI Designer</p>
           </li>
         </ul>
@@ -135,7 +135,7 @@
               width="360"
               height="300"
             />
-            <h3 class="card-title">Banking App</h3>
+            <h3 class="title">Banking App</h3>
             <p class="section-text">App</p>
           </li>
           <li>
@@ -145,7 +145,7 @@
               width="360"
               height="300"
             />
-            <h3 class="card-title">Cashless Payment</h3>
+            <h3 class="title">Cashless Payment</h3>
             <p class="section-text">Marketing</p>
           </li>
           <li>
@@ -155,7 +155,7 @@
               width="360"
               height="300"
             />
-            <h3 class="card-title">Meditation App</h3>
+            <h3 class="title">Meditation App</h3>
             <p class="section-text">App</p>
           </li>
           <li>
@@ -165,7 +165,7 @@
               width="360"
               height="300"
             />
-            <h3 class="card-title">Taxi Service</h3>
+            <h3 class="title">Taxi Service</h3>
             <p class="section-text">Marketing</p>
           </li>
           <li>
@@ -175,7 +175,7 @@
               width="360"
               height="300"
             />
-            <h3 class="card-title">Screen Illustrations</h3>
+            <h3 class="title">Screen Illustrations</h3>
             <p class="section-text">Design</p>
           </li>
           <li>
@@ -185,7 +185,7 @@
               width="360"
               height="300"
             />
-            <h3 class="card-title">Online Courses</h3>
+            <h3 class="title">Online Courses</h3>
             <p class="section-text">Marketing</p>
           </li>
         </ul>
