--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </section>
 
       <section>
-        <h2 class="section-title-middle">Our Team</h2>
+        <h2 class="section-title">Our Team</h2>
 
         <ul class="team-list">
           <li>
@@ -125,7 +125,7 @@
       </section>
 
       <section>
-        <h2 class="section-title-big">Our Portfolio</h2>
+        <h2 class="section-title">Our Portfolio</h2>
 
         <ul class="portfolio-list">
           <li>
