add the div elements for colorful background and add style rules for them, change some classes name

--- a/index.html
+++ b/index.html
@@ -41,11 +41,13 @@
     </header>
 
     <main>
-      <h1 class="page-title">Effective Solutions for Your Business</h1>
-      <button type="button" id="order-button">Order Service</button>
+      <div class="dark-bg">
+        <h1 class="page-title">Effective Solutions for Your Business</h1>
+        <button type="button" id="order-button">Order Service</button>
+      </div>
 
       <section>
-        <ul class="info-list">
+        <ul class="features-list">
           <li>
             <h2 class="title">Strategy</h2>
             <p class="section-text">
@@ -78,50 +80,52 @@
       </section>
 
       <section>
-        <h2 class="section-title">Our Team</h2>
+        <div class="light-bg">
+          <h2 class="section-title">Our Team</h2>
 
-        <ul class="team-list">
-          <li>
-            <img
-              src="./images/our-team/img-3.jpg"
-              alt="Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3 class="title">Mark Guerrero</h3>
-            <p class="section-text">Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="./images/our-team/img-2.jpg"
-              alt="Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3 class="title">Tom Ford</h3>
-            <p class="section-text">Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="./images/our-team/img-1.jpg"
-              alt="Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3 class="title">Camila Garcia</h3>
-            <p class="section-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/our-team/img.jpg"
-              alt="Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3 class="title">Daniel Wilson</h3>
-            <p class="section-text">UI Designer</p>
-          </li>
-        </ul>
+          <ul class="team-list">
+            <li>
+              <img
+                src="./images/our-team/img-3.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <h3 class="title">Mark Guerrero</h3>
+              <p class="section-text">Product Designer</p>
+            </li>
+            <li>
+              <img
+                src="./images/our-team/img-2.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="260"
+              />
+              <h3 class="title">Tom Ford</h3>
+              <p class="section-text">Frontend Developer</p>
+            </li>
+            <li>
+              <img
+                src="./images/our-team/img-1.jpg"
+                alt="Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <h3 class="title">Camila Garcia</h3>
+              <p class="section-text">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/our-team/img.jpg"
+                alt="Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <h3 class="title">Daniel Wilson</h3>
+              <p class="section-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section>
@@ -193,12 +197,14 @@
     </main>
 
     <footer class="page-footer">
-      <a href="#" class="company-logo"><em>Web</em>studio</a>
+      <div class="dark-bg">
+        <a href="#" class="company-logo"><em>Web</em>studio</a>
 
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
