--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <header class="page-header">
-      <a href="#" class="company-logo"><em>Web</em>studio</a>
+      <a href="#" class="company-logo"><span>Web</span>studio</a>
 
       <nav>
         <ul class="page-nav">
@@ -198,7 +198,7 @@
 
     <footer class="page-footer">
       <div class="dark-bg">
-        <a href="#" class="company-logo"><em>Web</em>studio</a>
+        <a href="#" class="company-logo"><span>Web</span>studio</a>
 
         <p class="footer-text">
           Increase the flow of customers and sales for your business with
