update the alt attribute values

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <li>
               <img
                 src="./images/our-team/img-3.jpg"
-                alt="Mark Guerrero"
+                alt="Team member 1"
                 width="264"
                 height="260"
               />
@@ -97,7 +97,7 @@
             <li>
               <img
                 src="./images/our-team/img-2.jpg"
-                alt="Tom Ford"
+                alt="Team member 2"
                 width="264"
                 height="260"
               />
@@ -107,7 +107,7 @@
             <li>
               <img
                 src="./images/our-team/img-1.jpg"
-                alt="Camila Garcia"
+                alt="Team member 3"
                 width="264"
                 height="260"
               />
@@ -117,7 +117,7 @@
             <li>
               <img
                 src="./images/our-team/img.jpg"
-                alt="Daniel Wilson"
+                alt="Team member 4"
                 width="264"
                 height="260"
               />
@@ -135,7 +135,7 @@
           <li>
             <img
               src="./images/our-portfolio/img-5.jpg"
-              alt="Banking App"
+              alt="Interface of different pages of the app"
               width="360"
               height="300"
             />
@@ -145,7 +145,7 @@
           <li>
             <img
               src="./images/our-portfolio/img-4.jpg"
-              alt="Cashless Payment"
+              alt="QR-code scanning for payment"
               width="360"
               height="300"
             />
@@ -155,7 +155,7 @@
           <li>
             <img
               src="./images/our-portfolio/img-3.jpg"
-              alt="Meditation App"
+              alt="App on phone and laptop"
               width="360"
               height="300"
             />
@@ -165,7 +165,7 @@
           <li>
             <img
               src="./images/our-portfolio/img-2.jpg"
-              alt="Taxi Service"
+              alt="Taxi driver driving in a car"
               width="360"
               height="300"
             />
@@ -175,7 +175,7 @@
           <li>
             <img
               src="./images/our-portfolio/img-1.jpg"
-              alt="Screen Illustrations"
+              alt="Examples of illustrations on the phone"
               width="360"
               height="300"
             />
@@ -185,7 +185,7 @@
           <li>
             <img
               src="./images/our-portfolio/img.jpg"
-              alt="Online Courses"
+              alt="A girl enjoying the course"
               width="360"
               height="300"
             />
