set class for the button element

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <main>
       <div class="dark-bg">
         <h1 class="page-title">Effective Solutions for Your Business</h1>
-        <button type="button" id="order-button">Order Service</button>
+        <button type="button" class="btn-primary">Order Service</button>
       </div>
 
       <section>
