remove the font-weight value that already set as default, add the section tag

--- a/index.html
+++ b/index.html
@@ -41,10 +41,12 @@
     </header>
 
     <main>
-      <div class="dark-bg">
-        <h1 class="page-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="btn-primary">Order Service</button>
-      </div>
+      <section>
+        <div class="dark-bg">
+          <h1 class="page-title">Effective Solutions for Your Business</h1>
+          <button type="button" class="btn-primary">Order Service</button>
+        </div>
+      </section>
 
       <section>
         <ul class="features-list">
