--- a/index.html
+++ b/index.html
@@ -24,20 +24,22 @@
   </head>
   <body>
     <header class="page-header">
-      <a href="#" class="company-logo"><span>Web</span>studio</a>
-
-      <nav>
-        <ul class="page-nav">
-          <li><a href="#" class="link">Studio</a></li>
-          <li><a href="#" class="link">Portfolio</a></li>
-          <li><a href="#" class="link">Contacts</a></li>
-        </ul>
-      </nav>
-
-      <address class="company-contacts">
-        <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
-        <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
-      </address>
+      <div class="top-line">
+        <a href="#" class="company-logo"><span>Web</span>studio</a>
+        <nav>
+          <ul class="page-nav">
+            <li><a href="#" class="link">Studio</a></li>
+            <li><a href="#" class="link">Portfolio</a></li>
+            <li><a href="#" class="link">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="company-contacts">
+          <a href="mailto:info@devstudio.com" class="link"
+            >info@devstudio.com</a
+          >
+          <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+        </address>
+      </div>
     </header>
 
     <main>
@@ -131,70 +133,71 @@
       </section>
 
       <section>
-        <h2 class="section-title">Our Portfolio</h2>
-
-        <ul class="portfolio-list">
-          <li>
-            <img
-              src="./images/our-portfolio/img-5.jpg"
-              alt="Interface of different pages of the app"
-              width="360"
-              height="300"
-            />
-            <h3 class="title">Banking App</h3>
-            <p class="section-text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/our-portfolio/img-4.jpg"
-              alt="QR-code scanning for payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="title">Cashless Payment</h3>
-            <p class="section-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/our-portfolio/img-3.jpg"
-              alt="App on phone and laptop"
-              width="360"
-              height="300"
-            />
-            <h3 class="title">Meditation App</h3>
-            <p class="section-text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/our-portfolio/img-2.jpg"
-              alt="Taxi driver driving in a car"
-              width="360"
-              height="300"
-            />
-            <h3 class="title">Taxi Service</h3>
-            <p class="section-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/our-portfolio/img-1.jpg"
-              alt="Examples of illustrations on the phone"
-              width="360"
-              height="300"
-            />
-            <h3 class="title">Screen Illustrations</h3>
-            <p class="section-text">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/our-portfolio/img.jpg"
-              alt="A girl enjoying the course"
-              width="360"
-              height="300"
-            />
-            <h3 class="title">Online Courses</h3>
-            <p class="section-text">Marketing</p>
-          </li>
-        </ul>
+        <div>
+          <h2 class="section-title">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li>
+              <img
+                src="./images/our-portfolio/img-5.jpg"
+                alt="Interface of different pages of the app"
+                width="360"
+                height="300"
+              />
+              <h3 class="title">Banking App</h3>
+              <p class="section-text">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/our-portfolio/img-4.jpg"
+                alt="QR-code scanning for payment"
+                width="360"
+                height="300"
+              />
+              <h3 class="title">Cashless Payment</h3>
+              <p class="section-text">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/our-portfolio/img-3.jpg"
+                alt="App on phone and laptop"
+                width="360"
+                height="300"
+              />
+              <h3 class="title">Meditation App</h3>
+              <p class="section-text">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/our-portfolio/img-2.jpg"
+                alt="Taxi driver driving in a car"
+                width="360"
+                height="300"
+              />
+              <h3 class="title">Taxi Service</h3>
+              <p class="section-text">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/our-portfolio/img-1.jpg"
+                alt="Examples of illustrations on the phone"
+                width="360"
+                height="300"
+              />
+              <h3 class="title">Screen Illustrations</h3>
+              <p class="section-text">Design</p>
+            </li>
+            <li>
+              <img
+                src="./images/our-portfolio/img.jpg"
+                alt="A girl enjoying the course"
+                width="360"
+                height="300"
+              />
+              <h3 class="title">Online Courses</h3>
+              <p class="section-text">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
