add the class attribute to the section tags, temporary remove some styles in style.css

--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
     </header>
 
     <main>
-      <section>
+      <section class="section-title">
         <div class="dark-bg">
           <h1 class="page-title">Effective Solutions for Your Business</h1>
           <button type="button" class="btn-primary">Order Service</button>
         </div>
       </section>
 
-      <section>
+      <section class="section-features">
         <ul class="features-list">
           <li>
             <h2 class="title">Strategy</h2>
@@ -83,7 +83,7 @@
         </ul>
       </section>
 
-      <section>
+      <section class="section-our-team">
         <div class="light-bg">
           <h2 class="section-title">Our Team</h2>
 
@@ -132,7 +132,7 @@
         </div>
       </section>
 
-      <section>
+      <section class="section-our-portfolio">
         <div>
           <h2 class="section-title">Our Portfolio</h2>
           <ul class="portfolio-list">
