--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <header class="page-header">
       <div class="top-line">
-        <a href="#" class="company-logo"><span>Web</span>studio</a>
+        <a href="./index.html" class="company-logo"><span>Web</span>Studio</a>
         <nav>
           <ul class="page-nav">
             <li><a href="#" class="link">Studio</a></li>
@@ -51,30 +51,31 @@
       </section>
 
       <section class="section-features">
+        <h2>Features</h2>
         <ul class="features-list">
           <li>
-            <h2 class="title">Strategy</h2>
+            <h3 class="title">Strategy</h3>
             <p class="section-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h2 class="title">Punctuality</h2>
+            <h3 class="title">Punctuality</h3>
             <p class="section-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h2 class="title">Diligence</h2>
+            <h3 class="title">Diligence</h3>
             <p class="section-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
+              Research and confirm brands with the strongest digital growth
+              opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h2 class="title">Technologies</h2>
+            <h3 class="title">Technologies</h3>
             <p class="section-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -203,7 +204,7 @@
 
     <footer class="page-footer">
       <div class="dark-bg">
-        <a href="#" class="company-logo"><span>Web</span>studio</a>
+        <a href="./index.html" class="company-logo"><span>Web</span>Studio</a>
 
         <p class="footer-text">
           Increase the flow of customers and sales for your business with
