--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </section>
 
       <section class="section-features">
-        <h2>Features</h2>
+        <h2 class="section-title">Features</h2>
         <ul class="features-list">
           <li>
             <h3 class="title">Strategy</h3>
