--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
   <body>
     <header class="page-header">
       <div class="top-line">
-        <a href="./index.html" class="company-logo"><span>Web</span>Studio</a>
         <nav>
+          <a href="./index.html" class="company-logo"
+            >Web<span class="logo-spec-part">Studio</span></a
+          >
           <ul class="page-nav">
-            <li><a href="#" class="link">Studio</a></li>
+            <li><a href="./index.html" class="link">Studio</a></li>
             <li><a href="#" class="link">Portfolio</a></li>
             <li><a href="#" class="link">Contacts</a></li>
           </ul>
@@ -206,7 +208,9 @@
 
     <footer class="page-footer">
       <div class="dark-bg">
-        <a href="./index.html" class="company-logo"><span>Web</span>Studio</a>
+        <a href="./index.html" class="company-logo"
+          >Web<span class="logo-spec-part">Studio</span></a
+        >
 
         <p class="footer-text">
           Increase the flow of customers and sales for your business with
