--- a/index.html
+++ b/index.html
@@ -24,24 +24,20 @@
   </head>
   <body>
     <header class="page-header">
-      <div class="top-line">
-        <nav>
-          <a href="./index.html" class="company-logo"
-            >Web<span class="logo-spec-part">Studio</span></a
-          >
-          <ul class="page-nav">
-            <li><a href="./index.html" class="link">Studio</a></li>
-            <li><a href="#" class="link">Portfolio</a></li>
-            <li><a href="#" class="link">Contacts</a></li>
-          </ul>
-        </nav>
-        <address class="company-contacts">
-          <a href="mailto:info@devstudio.com" class="link"
-            >info@devstudio.com</a
-          >
-          <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
-        </address>
-      </div>
+      <nav>
+        <a href="./index.html" class="company-logo">
+          Web<span class="logo-spec-part">Studio</span>
+        </a>
+        <ul class="page-nav">
+          <li><a href="./index.html" class="link">Studio</a></li>
+          <li><a href="#" class="link">Portfolio</a></li>
+          <li><a href="#" class="link">Contacts</a></li>
+        </ul>
+      </nav>
+      <address class="company-contacts">
+        <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+        <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+      </address>
     </header>
 
     <main>
