--- a/index.html
+++ b/index.html
@@ -28,15 +28,23 @@
         <a href="./index.html" class="company-logo">
           Web<span class="logo-spec-part">Studio</span>
         </a>
-        <ul class="page-nav">
+        <ul class="page-nav-list">
           <li><a href="./index.html" class="link">Studio</a></li>
-          <li><a href="#" class="link">Portfolio</a></li>
-          <li><a href="#" class="link">Contacts</a></li>
+          <li><a href="" class="link">Portfolio</a></li>
+          <li><a href="" class="link">Contacts</a></li>
         </ul>
       </nav>
-      <address class="company-contacts">
-        <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
-        <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+      <address>
+        <ul class="company-contacts-list">
+          <li>
+            <a href="mailto:info@devstudio.com" class="link">
+              info@devstudio.com
+            </a>
+          </li>
+          <li>
+            <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
       </address>
     </header>
 
