--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <header class="page-header">
-      <nav>
+      <nav class="page-nav">
         <a href="./index.html" class="company-logo">
           Web<span class="logo-spec-part">Studio</span>
         </a>
@@ -34,7 +34,7 @@
           <li><a href="" class="link">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="company-contacts">
         <ul class="company-contacts-list">
           <li>
             <a href="mailto:info@devstudio.com" class="link">
