remove the div tag from the section tags

--- a/index.html
+++ b/index.html
@@ -50,11 +50,9 @@
 
     <main>
       <section class="section-title">
-        <div class="dark-bg">
-          <h1 class="page-title">Effective Solutions for Your Business</h1>
+        <h1 class="page-title">Effective Solutions for Your Business</h1>
 
-          <button type="button" class="btn-primary">Order Service</button>
-        </div>
+        <button type="button" class="btn-primary">Order Service</button>
       </section>
 
       <section class="section-features">
@@ -93,128 +91,124 @@
       </section>
 
       <section class="section-our-team">
-        <div class="light-bg">
-          <h2 class="section-title">Our Team</h2>
+        <h2 class="section-title">Our Team</h2>
 
-          <ul class="team-list">
-            <li>
-              <img
-                src="./images/our-team/img-3.jpg"
-                alt="Team member 1"
-                width="264"
-                height="260"
-              />
-              <h3 class="title">Mark Guerrero</h3>
-              <p class="section-text">Product Designer</p>
-            </li>
-            <li>
-              <img
-                src="./images/our-team/img-2.jpg"
-                alt="Team member 2"
-                width="264"
-                height="260"
-              />
-              <h3 class="title">Tom Ford</h3>
-              <p class="section-text">Frontend Developer</p>
-            </li>
-            <li>
-              <img
-                src="./images/our-team/img-1.jpg"
-                alt="Team member 3"
-                width="264"
-                height="260"
-              />
-              <h3 class="title">Camila Garcia</h3>
-              <p class="section-text">Marketing</p>
-            </li>
-            <li>
-              <img
-                src="./images/our-team/img.jpg"
-                alt="Team member 4"
-                width="264"
-                height="260"
-              />
-              <h3 class="title">Daniel Wilson</h3>
-              <p class="section-text">UI Designer</p>
-            </li>
-          </ul>
-        </div>
+        <ul class="team-list">
+          <li>
+            <img
+              src="./images/our-team/img-3.jpg"
+              alt="Team member 1"
+              width="264"
+              height="260"
+            />
+            <h3 class="title">Mark Guerrero</h3>
+            <p class="section-text">Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./images/our-team/img-2.jpg"
+              alt="Team member 2"
+              width="264"
+              height="260"
+            />
+            <h3 class="title">Tom Ford</h3>
+            <p class="section-text">Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/our-team/img-1.jpg"
+              alt="Team member 3"
+              width="264"
+              height="260"
+            />
+            <h3 class="title">Camila Garcia</h3>
+            <p class="section-text">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/our-team/img.jpg"
+              alt="Team member 4"
+              width="264"
+              height="260"
+            />
+            <h3 class="title">Daniel Wilson</h3>
+            <p class="section-text">UI Designer</p>
+          </li>
+        </ul>
       </section>
 
       <section class="section-our-portfolio">
-        <div>
-          <h2 class="section-title">Our Portfolio</h2>
-          <ul class="portfolio-list">
-            <li>
-              <img
-                src="./images/our-portfolio/img-5.jpg"
-                alt="Interface of different pages of the app"
-                width="360"
-                height="300"
-              />
-              <h3 class="title">Banking App</h3>
-              <p class="section-text">App</p>
-            </li>
-            <li>
-              <img
-                src="./images/our-portfolio/img-4.jpg"
-                alt="QR-code scanning for payment"
-                width="360"
-                height="300"
-              />
-              <h3 class="title">Cashless Payment</h3>
-              <p class="section-text">Marketing</p>
-            </li>
-            <li>
-              <img
-                src="./images/our-portfolio/img-3.jpg"
-                alt="App on phone and laptop"
-                width="360"
-                height="300"
-              />
-              <h3 class="title">Meditation App</h3>
-              <p class="section-text">App</p>
-            </li>
-            <li>
-              <img
-                src="./images/our-portfolio/img-2.jpg"
-                alt="Taxi driver driving in a car"
-                width="360"
-                height="300"
-              />
-              <h3 class="title">Taxi Service</h3>
-              <p class="section-text">Marketing</p>
-            </li>
-            <li>
-              <img
-                src="./images/our-portfolio/img-1.jpg"
-                alt="Examples of illustrations on the phone"
-                width="360"
-                height="300"
-              />
-              <h3 class="title">Screen Illustrations</h3>
-              <p class="section-text">Design</p>
-            </li>
-            <li>
-              <img
-                src="./images/our-portfolio/img.jpg"
-                alt="A girl enjoying the course"
-                width="360"
-                height="300"
-              />
-              <h3 class="title">Online Courses</h3>
-              <p class="section-text">Marketing</p>
-            </li>
-          </ul>
-        </div>
+        <h2 class="section-title">Our Portfolio</h2>
+        <ul class="portfolio-list">
+          <li>
+            <img
+              src="./images/our-portfolio/img-5.jpg"
+              alt="Interface of different pages of the app"
+              width="360"
+              height="300"
+            />
+            <h3 class="title">Banking App</h3>
+            <p class="section-text">App</p>
+          </li>
+          <li>
+            <img
+              src="./images/our-portfolio/img-4.jpg"
+              alt="QR-code scanning for payment"
+              width="360"
+              height="300"
+            />
+            <h3 class="title">Cashless Payment</h3>
+            <p class="section-text">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/our-portfolio/img-3.jpg"
+              alt="App on phone and laptop"
+              width="360"
+              height="300"
+            />
+            <h3 class="title">Meditation App</h3>
+            <p class="section-text">App</p>
+          </li>
+          <li>
+            <img
+              src="./images/our-portfolio/img-2.jpg"
+              alt="Taxi driver driving in a car"
+              width="360"
+              height="300"
+            />
+            <h3 class="title">Taxi Service</h3>
+            <p class="section-text">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/our-portfolio/img-1.jpg"
+              alt="Examples of illustrations on the phone"
+              width="360"
+              height="300"
+            />
+            <h3 class="title">Screen Illustrations</h3>
+            <p class="section-text">Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/our-portfolio/img.jpg"
+              alt="A girl enjoying the course"
+              width="360"
+              height="300"
+            />
+            <h3 class="title">Online Courses</h3>
+            <p class="section-text">Marketing</p>
+          </li>
+        </ul>
       </section>
     </main>
 
     <footer class="page-footer">
       <div class="dark-bg">
-        <a href="./index.html" class="company-logo"
-          >Web<span class="logo-spec-part">Studio</span></a
-        >
+        <a href="./index.html" class="company-logo">
+          Web<span class="logo-spec-part">Studio</span>
+        </a>
 
         <p class="footer-text">
           Increase the flow of customers and sales for your business with
