--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </header>
 
     <main>
-      <section class="section-title">
+      <section class="section-main-title">
         <h1 class="page-title">Effective Solutions for Your Business</h1>
 
         <button type="button" class="btn-primary">Order Service</button>
