--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <h2 class="section-title">Features</h2>
 
         <ul class="features-list">
-          <li>
+          <li class="feature-first">
             <h3 class="title">Strategy</h3>
             <p class="section-text">
               Our goal is to identify the business problem to walk away with the
