--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header class="page-header">
       <nav class="page-nav">
         <a href="./index.html" class="company-logo">
-          Web<span class="logo-spec-part">Studio</span>
+          Web<span class="header-logo-spec-part">Studio</span>
         </a>
         <ul class="page-nav-list">
           <li><a href="./index.html" class="link">Studio</a></li>
@@ -205,16 +205,14 @@
     </main>
 
     <footer class="page-footer">
-      <div class="dark-bg">
-        <a href="./index.html" class="company-logo">
-          Web<span class="logo-spec-part">Studio</span>
-        </a>
+      <a href="./index.html" class="company-logo">
+        Web<span class="footer-logo-spec-part">Studio</span>
+      </a>
 
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
+      <p class="footer-text">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
