add the letter-spacing property for the li-title elements and the p tag elements

--- a/index.html
+++ b/index.html
@@ -60,28 +60,28 @@
 
         <ul class="features-list">
           <li class="feature-first">
-            <h3 class="title">Strategy</h3>
+            <h3 class="li-title">Strategy</h3>
             <p class="section-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3 class="title">Punctuality</h3>
+            <h3 class="li-title">Punctuality</h3>
             <p class="section-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3 class="title">Diligence</h3>
+            <h3 class="li-title">Diligence</h3>
             <p class="section-text">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3 class="title">Technologies</h3>
+            <h3 class="li-title">Technologies</h3>
             <p class="section-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -101,7 +101,7 @@
               width="264"
               height="260"
             />
-            <h3 class="title">Mark Guerrero</h3>
+            <h3 class="li-title">Mark Guerrero</h3>
             <p class="section-text">Product Designer</p>
           </li>
           <li>
@@ -111,7 +111,7 @@
               width="264"
               height="260"
             />
-            <h3 class="title">Tom Ford</h3>
+            <h3 class="li-title">Tom Ford</h3>
             <p class="section-text">Frontend Developer</p>
           </li>
           <li>
@@ -121,7 +121,7 @@
               width="264"
               height="260"
             />
-            <h3 class="title">Camila Garcia</h3>
+            <h3 class="li-title">Camila Garcia</h3>
             <p class="section-text">Marketing</p>
           </li>
           <li>
@@ -131,7 +131,7 @@
               width="264"
               height="260"
             />
-            <h3 class="title">Daniel Wilson</h3>
+            <h3 class="li-title">Daniel Wilson</h3>
             <p class="section-text">UI Designer</p>
           </li>
         </ul>
@@ -147,7 +147,7 @@
               width="360"
               height="300"
             />
-            <h3 class="title">Banking App</h3>
+            <h3 class="li-title">Banking App</h3>
             <p class="section-text">App</p>
           </li>
           <li>
@@ -157,7 +157,7 @@
               width="360"
               height="300"
             />
-            <h3 class="title">Cashless Payment</h3>
+            <h3 class="li-title">Cashless Payment</h3>
             <p class="section-text">Marketing</p>
           </li>
           <li>
@@ -167,7 +167,7 @@
               width="360"
               height="300"
             />
-            <h3 class="title">Meditation App</h3>
+            <h3 class="li-title">Meditation App</h3>
             <p class="section-text">App</p>
           </li>
           <li>
@@ -177,7 +177,7 @@
               width="360"
               height="300"
             />
-            <h3 class="title">Taxi Service</h3>
+            <h3 class="li-title">Taxi Service</h3>
             <p class="section-text">Marketing</p>
           </li>
           <li>
@@ -187,7 +187,7 @@
               width="360"
               height="300"
             />
-            <h3 class="title">Screen Illustrations</h3>
+            <h3 class="li-title">Screen Illustrations</h3>
             <p class="section-text">Design</p>
           </li>
           <li>
@@ -197,7 +197,7 @@
               width="360"
               height="300"
             />
-            <h3 class="title">Online Courses</h3>
+            <h3 class="li-title">Online Courses</h3>
             <p class="section-text">Marketing</p>
           </li>
         </ul>
