add the background-color property for the team-card elements

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <h2 class="section-title">Features</h2>
 
         <ul class="features-list">
-          <li class="feature-first">
+          <li>
             <h3 class="li-title">Strategy</h3>
             <p class="section-text">
               Our goal is to identify the business problem to walk away with the
@@ -94,7 +94,7 @@
         <h2 class="section-title">Our Team</h2>
 
         <ul class="team-list">
-          <li>
+          <li class="team-card">
             <img
               src="./images/our-team/img-3.jpg"
               alt="Team member 1"
@@ -104,7 +104,7 @@
             <h3 class="li-title">Mark Guerrero</h3>
             <p class="section-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-card">
             <img
               src="./images/our-team/img-2.jpg"
               alt="Team member 2"
@@ -114,7 +114,7 @@
             <h3 class="li-title">Tom Ford</h3>
             <p class="section-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-card">
             <img
               src="./images/our-team/img-1.jpg"
               alt="Team member 3"
@@ -124,7 +124,7 @@
             <h3 class="li-title">Camila Garcia</h3>
             <p class="section-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-card">
             <img
               src="./images/our-team/img.jpg"
               alt="Team member 4"
