--- a/index.html
+++ b/index.html
@@ -23,66 +23,68 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header class="page-header">
-      <nav class="page-nav">
-        <a href="./index.html" class="company-logo">
-          Web<span class="header-logo-spec-part">Studio</span>
+    <header class="header">
+      <nav class="header__nav">
+        <a href="./index.html" class="logo">
+          Web<span class="logo__highlight logo__highlight--header">Studio</span>
         </a>
-        <ul class="page-nav-list">
-          <li><a href="./index.html" class="link">Studio</a></li>
-          <li><a href="" class="link">Portfolio</a></li>
-          <li><a href="" class="link">Contacts</a></li>
+        <ul class="header__nav-list">
+          <li><a href="./index.html" class="link link--nav">Studio</a></li>
+          <li><a href="" class="link link--nav">Portfolio</a></li>
+          <li><a href="" class="link link--nav">Contacts</a></li>
         </ul>
       </nav>
-      <address class="company-contacts">
-        <ul class="company-contacts-list">
+      <address class="header__contacts">
+        <ul class="header__contacts-list">
           <li>
-            <a href="mailto:info@devstudio.com" class="link">
+            <a href="mailto:info@devstudio.com" class="link link--contacts">
               info@devstudio.com
             </a>
           </li>
           <li>
-            <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="link link--contacts">
+              +11 (000) 111-11-11
+            </a>
           </li>
         </ul>
       </address>
     </header>
 
     <main>
-      <section class="section-page-title">
-        <h1 class="page-title">Effective Solutions for Your Business</h1>
+      <section class="hero">
+        <h1 class="hero__title">Effective Solutions for Your Business</h1>
 
-        <button type="button" class="btn-primary">Order Service</button>
+        <button type="button" class="hero__button">Order Service</button>
       </section>
 
-      <section class="section-features">
-        <h2 class="section-title">Features</h2>
+      <section class="features">
+        <h2 class="features__title title-section">Features</h2>
 
-        <ul class="features-list">
+        <ul class="features__list">
           <li>
-            <h3 class="li-title">Strategy</h3>
-            <p class="section-text">
+            <h3 class="features__item title-item">Strategy</h3>
+            <p class="features__item-text item-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3 class="li-title">Punctuality</h3>
-            <p class="section-text">
+            <h3 class="features__item title-item">Punctuality</h3>
+            <p class="features__item-text item-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3 class="li-title">Diligence</h3>
-            <p class="section-text">
+            <h3 class="features__item title-item">Diligence</h3>
+            <p class="features__item-text item-text">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3 class="li-title">Technologies</h3>
-            <p class="section-text">
+            <h3 class="features__item title-item">Technologies</h3>
+            <p class="features__item-text item-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -90,56 +92,57 @@
         </ul>
       </section>
 
-      <section class="section-our-team">
-        <h2 class="section-title">Our Team</h2>
+      <section class="team">
+        <h2 class="team__title title-section">Our Team</h2>
 
-        <ul class="team-list">
-          <li class="team-card">
+        <ul class="team__list">
+          <li class="team__card">
             <img
               src="./images/our-team/img-3.jpg"
               alt="Team member 1"
               width="264"
               height="260"
             />
-            <h3 class="li-title">Mark Guerrero</h3>
-            <p class="section-text">Product Designer</p>
+            <h3 class="team__item title-item">Mark Guerrero</h3>
+            <p class="team__item-text item-text">Product Designer</p>
           </li>
-          <li class="team-card">
+          <li class="team__card">
             <img
               src="./images/our-team/img-2.jpg"
               alt="Team member 2"
               width="264"
               height="260"
             />
-            <h3 class="li-title">Tom Ford</h3>
-            <p class="section-text">Frontend Developer</p>
+            <h3 class="team__item title-item">Tom Ford</h3>
+            <p class="team__item-text item-text">Frontend Developer</p>
           </li>
-          <li class="team-card">
+          <li class="team__card">
             <img
               src="./images/our-team/img-1.jpg"
               alt="Team member 3"
               width="264"
               height="260"
             />
-            <h3 class="li-title">Camila Garcia</h3>
-            <p class="section-text">Marketing</p>
+            <h3 class="team__item title-item">Camila Garcia</h3>
+            <p class="team__item-text item-text">Marketing</p>
           </li>
-          <li class="team-card">
+          <li class="team__card">
             <img
               src="./images/our-team/img.jpg"
               alt="Team member 4"
               width="264"
               height="260"
             />
-            <h3 class="li-title">Daniel Wilson</h3>
-            <p class="section-text">UI Designer</p>
+            <h3 class="team__item title-item">Daniel Wilson</h3>
+            <p class="team__item-text item-text">UI Designer</p>
           </li>
         </ul>
       </section>
 
-      <section class="section-our-portfolio">
-        <h2 class="section-title">Our Portfolio</h2>
-        <ul class="portfolio-list">
+      <section class="portfolio">
+        <h2 class="portfolio__title title-section">Our Portfolio</h2>
+
+        <ul class="portfolio__list">
           <li>
             <img
               src="./images/our-portfolio/img-5.jpg"
@@ -147,8 +150,8 @@
               width="360"
               height="300"
             />
-            <h3 class="li-title">Banking App</h3>
-            <p class="section-text">App</p>
+            <h3 class="portfolio__item title-item">Banking App</h3>
+            <p class="portfolio__item-text item-text">App</p>
           </li>
           <li>
             <img
@@ -157,8 +160,8 @@
               width="360"
               height="300"
             />
-            <h3 class="li-title">Cashless Payment</h3>
-            <p class="section-text">Marketing</p>
+            <h3 class="portfolio__item title-item">Cashless Payment</h3>
+            <p class="portfolio__item-text item-text">Marketing</p>
           </li>
           <li>
             <img
@@ -167,8 +170,8 @@
               width="360"
               height="300"
             />
-            <h3 class="li-title">Meditation App</h3>
-            <p class="section-text">App</p>
+            <h3 class="portfolio__item title-item">Meditation App</h3>
+            <p class="portfolio__item-text item-text">App</p>
           </li>
           <li>
             <img
@@ -177,8 +180,8 @@
               width="360"
               height="300"
             />
-            <h3 class="li-title">Taxi Service</h3>
-            <p class="section-text">Marketing</p>
+            <h3 class="portfolio__item title-item">Taxi Service</h3>
+            <p class="portfolio__item-text item-text">Marketing</p>
           </li>
           <li>
             <img
@@ -187,8 +190,8 @@
               width="360"
               height="300"
             />
-            <h3 class="li-title">Screen Illustrations</h3>
-            <p class="section-text">Design</p>
+            <h3 class="portfolio__item title-item">Screen Illustrations</h3>
+            <p class="portfolio__item-text item-text">Design</p>
           </li>
           <li>
             <img
@@ -197,19 +200,19 @@
               width="360"
               height="300"
             />
-            <h3 class="li-title">Online Courses</h3>
-            <p class="section-text">Marketing</p>
+            <h3 class="portfolio__item title-item">Online Courses</h3>
+            <p class="portfolio__item-text item-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer class="page-footer">
-      <a href="./index.html" class="company-logo">
-        Web<span class="footer-logo-spec-part">Studio</span>
+    <footer class="footer">
+      <a href="./index.html" class="logo">
+        Web<span class="logo__highlight logo__highlight--footer">Studio</span>
       </a>
 
-      <p class="footer-text">
+      <p class="footer__text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
